# cheki-bot-server

./: .env.example  .gitignore  Dockerfile  README.md  commands.py  docker-compose.yml  pyproject.toml
.continue/prompts/: tools.yaml
.continue/rules/: python_best_practices.md  python_rules.md
.github/workflows/: pytest.yml  ruff-linter.yml
docs/: terminal_commands.md
notebooks/: test_agent.ipynb
scripts/: create_vectordb.py  download_data.py  start_db.py  telegram_bot.py
src/: __init__.py  consts.py  settings.py
src/agents/: nebius_agent.py  openai_agent.py
src/agents/context_managers/: chroma_cm.py  prompts.py
src/api/: app.py  deps.py  models.py
src/api/routes/: __init__.py  chatbot.py
src/core/: agent.py  conts.py
src/core/entities/: context_manager.py  vector_store.py
src/tests/: test_agent.py
src/tests/e2e/: test_chatbot.py
