[project]
name = "chekibot_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Willy Samuel Paz Colque", email = "willypaz243@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
