[project]
name = "chekibot_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Willy Samuel Paz Colque", email = "willypaz243@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi[all]>=0.116.1",
    "google-api-python-client>=2.178.0",
    "jq>=1.10.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-nebius>=0.1.3",
    "langchain-openai>=0.3.28",
    "pydantic-settings>=2.10.1",
    "pytest-asyncio>=1.1.0",
    "tiktoken>=0.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
